Nova promjena u development branch

--- a/index.html
+++ b/index.html
@@ -2,3 +2,5 @@
 <h2>Pozdrav iz aplikacije od Marka Ćosića</h2>
 <hr>
 <h2>Izmijenjena datoteka koja sadrži novu poruku..</h2>
+<hr>
+<h2>Nova promjena</h2>
